2011-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-pop-to-buffer-same-window): New defun.
	* tramp-cmds.el (tramp-append-tramp-buffers): Use it.

2011-07-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-cmds.el (tramp-append-tramp-buffers): Fix some uses of
	switch-to-buffer.

2011-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-cleanup-this-connection): New command.

	* tramp-sh.el (tramp-color-escape-sequence-regexp): New defconst.
	(tramp-sh-handle-insert-directory, tramp-convert-file-attributes):
	Use it.
	(tramp-remote-path): Add "/bin" and "/usr/bin".  On busyboxes,
	`tramp-default-remote-path' does not exist.
	(tramp-send-command-and-read): New optional argument NOERROR.
	(tramp-open-connection-setup-interactive-shell)
	(tramp-get-remote-path, tramp-get-remote-stat): Use it.
	(tramp-get-remote-readlink): Do not mask with `ignore-errors'.
	(tramp-process-sentinel): Flush also process' connection property.
	(tramp-sh-handle-start-file-process): Do not set process
	sentinel.  It is done now ...
	(tramp-maybe-open-connection): ... here.  (Bug#8929)

2011-07-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-encoding-command-interactive): New defcustom.

	* tramp-sh.el (tramp-maybe-open-connection): Use it.

2011-06-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-method-out-of-band-p): Check, whether SIZE is
	a number.

2011-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (top): Don't load the persistency file when
	"emacs -Q" has been called.

2011-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message): Add `tramp-with-progress-reporter'
	to ignored backtrace functions.

2011-06-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-find-shell): Apply workaround also for "SunOS
	5.10".

2011-06-02  Stefan Monnier  <monnier@iro.umontreal.ca>
