@@ -1,3 +1,8 @@
+2011-07-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-start-file-process): Use a
+	human-friendly prompt.
+
 2011-07-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-pop-to-buffer-same-window): New defun.
